@@ -1,0 +1,9 @@
+Title: citrix_license/esx_license: Can now be configured to always show OK as state
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.2.5i7
+Date: 1414758172
+Class: feature
+
+
